--- a/views/googleMaps.ejs
+++ b/views/googleMaps.ejs
@@ -1,6 +1,8 @@
-<p class="h3">Mapa</p>
-<!--The div element for the map -->
-<div id="map"></div>
+<div class="d-flex justify-content-center">
+    <p class="h3">Mapa</p>
+    <!--The div element for the map -->
+    <div id="map"></div>
+</div>
 
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script
