--- a/views/googleMapsScript.ejs
+++ b/views/googleMapsScript.ejs
@@ -5,39 +5,56 @@
             enableHighAccuracy: true,
             timeout: 5000,
             maximumAge: 0
-        }
+        };
         // Mostrar o as rotas dos transportes públicos e o tráfego
-        const transitButton = document.createElement("button");
+        const transitButton = document.createElement('button');
+        const trafficButton = document.createElement('button');
         navigator.geolocation.getCurrentPosition(pos => {
-            const posicao = { 
-                lat: pos.coords.latitude, 
-                lng: pos.coords.longitude
-            };
+            const posicao = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
             const map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 15,
                 center: posicao,
             });
-            transitButton.textContent = "Show public transit/traffic";
+            
+            transitButton.textContent = "Linhas de transporte"; // Metrô e trem
             transitButton.classList.add("custom-map-control-button");
             map.controls[google.maps.ControlPosition.TOP_CENTER].push(transitButton);
+
+            trafficButton.textContent = "Tráfego";
+            trafficButton.classList.add("custom-map-control-button");
+            map.controls[google.maps.ControlPosition.TOP_CENTER].push(trafficButton);
+
             const transitLayer = new google.maps.TransitLayer();
             const trafficLayer = new google.maps.TrafficLayer();
+
             transitButton.addEventListener('click', _ => {
                 // toggle
-                if(transitLayer.getMap() && trafficLayer.getMap()) {
+                if(transitLayer.getMap()) {
                     transitLayer.setMap(null);
-                    trafficLayer.setMap(null);
                 } else {
                     transitLayer.setMap(map);
-                    trafficLayer.setMap(map);
                 }
                 
             });
+
+            trafficButton.addEventListener('click', _ => {
+                // toggle
+                if(trafficLayer.getMap()) {
+                    trafficLayer.setMap(null);
+                } else {
+                    trafficLayer.setMap(map);
+                }
+            });
+
+            // Marcador "você está aqui"
             const marker = new google.maps.Marker({
                 position: posicao,
-                map: map,
+                map,
+                title: 'Você está aqui!'
             });
-        }, err => console.log(err), options);
+        }, 
+        err => alert(err + ' Please enable your GPS position feature.'), 
+        options);
         
     }
 </script>
