--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,8 @@
 #map {
-    margin-top: 10%;
-    height: 600px;
-    width: 50%;
+    margin-top: 2%;
+    margin-right: 2%;
+    height: 700px;
+    width: 32%;
 }
 
 /* Botões de tráfego */
@@ -9,7 +10,7 @@
 /* Design dos botões pego da internet, segue link abaixo */
 /* https://stackoverflow.com/questions/20033343/google-maps-custom-button-with-standard-style */
 .custom-map-control-button {
-    margin-top: 1.8%;
+    margin-top: 3%;
     cursor: pointer;
     direction: ltr;
     overflow: hidden;
@@ -17,7 +18,7 @@
     position: relative;
     color: rgb(0, 0, 0);
     font-family: "Roboto", Arial, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     background-color: rgb(255, 255, 255);
     padding: 1px 6px;
     border-bottom-left-radius: 2px;
