--- a/views/googleMapsScript.ejs
+++ b/views/googleMapsScript.ejs
@@ -1,7 +1,7 @@
 <script>
     function initMap() {
         // get location
-        let options = {
+        const options = {
             enableHighAccuracy: true,
             timeout: 5000,
             maximumAge: 0
@@ -10,7 +10,10 @@
         const transitButton = document.createElement('button');
         const trafficButton = document.createElement('button');
         navigator.geolocation.getCurrentPosition(pos => {
-            const posicao = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
+            const posicao = { 
+                lat: pos.coords.latitude, 
+                lng: pos.coords.longitude
+            };
             const map = new google.maps.Map(document.getElementById('map'), {
                 zoom: 15,
                 center: posicao,
@@ -53,7 +56,7 @@
                 title: 'Você está aqui!'
             });
         }, 
-        err => alert(err + ' Please enable your GPS position feature.'), 
+        err => alert(err + '\nPlease enable your GPS position feature.'), 
         options);
         
     }
