--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include("header") -%>
 <%- include("googleMapsScript") -%>
+<%- include("navbar") -%>
 <%- include("googleMaps") -%>
 <%- include("footer") -%>
