--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark" style="background-color: #004A80;">
     <a class="navbar-brand" href="#">
-      <img src="images/logo-prefeitura-rio-2021.png"  class="d-inline-block align-top" alt="">
+      <img src="images/logo-prefeitura-rio-2021.png"  class="d-inline-block align-top" alt="Prefeitura do Rio">
     </a>
 </nav>
