mais mudanças de design

--- a/views/googleMaps.ejs
+++ b/views/googleMaps.ejs
@@ -1,6 +1,4 @@
-<div class="d-flex justify-content-end">
-    <div id="map"></div>
-</div>
+<div class="p-5" id="map"></div>
 
 <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
 <script
