--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <%- include("header") -%>
 <%- include("googleMapsScript") -%>
 <%- include("navbar") -%>
-<%- include("googleMaps") -%>
+<div class="d-flex flex-row align-items-stretch">
+    <%- include("pesquisa") -%>
+    <%- include("googleMaps") -%>
+</div>
 <%- include("footer") -%>
