requisicoes salvas em arquivo externo

--- a/views/pesquisa.ejs
+++ b/views/pesquisa.ejs
@@ -1,4 +1,4 @@
-<div class="p-5 flex-fill">
+<div class="p-5 flex-fill formDiv">
     <form method="GET" action="/help">
         <div class="w-75 form-row">
             <div class="col-auto my-1">
