--- a/views/pesquisa.ejs
+++ b/views/pesquisa.ejs
@@ -1,15 +1,28 @@
-<div class="p-5 flex-fill formDiv">
-    <form method="GET" action="/help">
-        <div class="w-75 form-row">
-            <div class="col-auto my-1">
-                <label for="codigoPonto" class="text-primary"><i class="p-1 fa-solid fa-circle-arrow-right"></i>Qual ponto você quer ter mais informações?</label>
-            </div>
-            <div class="col-auto my-3">
-                <input type="search" class="text-center form-control" id="codigoPonto" placeholder="Informe o Código do Ponto Ex.: AA99">
-            </div>
-            <div class="col-auto my-3">
-                <button type="button" class="w-100 btn btn-primary btn-lg"><i class="p-1 fa-solid fa-qrcode"></i>Usar QRCode</button>
-            </div>
+<div class="p-5 flex-fill">
+    <div class="w-75 form-row">
+        <div class="col-auto my-1">
+            <label for="codigoPonto" class="me-5 text-primary"><i class="p-1 fa-solid fa-circle-arrow-right"></i>Qual ponto você quer ter mais informações?</label>
+            <a class="me-5 btn btn-outline-primary" href="#" role="button" id="enviar">Enviar</a>
         </div>
-    </form>
+        <div class="col-auto my-3">
+            <input type="search" class="text-center form-control" id="codigoPonto" placeholder="Informe o Código do Ponto Ex.: AA99" name="code">
+        </div>
+        <div class="col-auto my-3">
+            <button type="button" class="w-100 btn btn-primary btn-lg"><i class="p-1 fa-solid fa-qrcode"></i>Usar QRCode</button>
+        </div>
+    </div>
+    <script type="text/javascript">
+        const botao = document.getElementById('enviar');
+        botao.onclick = _ => {
+            console.log(botao)
+            const input = document.getElementById('codigoPonto').value;
+            console.log(input)
+            if(input != '') {
+                botao.href = '/ponto/' + input; 
+            } else {
+                botao.href = '#';
+            }
+        };
+    </script>
+    <%- include("linhas") -%>
 </div>
