--- a/views/googleMapsScript.ejs
+++ b/views/googleMapsScript.ejs
@@ -1,63 +1,73 @@
 <script>
-    function initMap() {
-        // get location
+    function getLocation() {
+        let posicao = {};
         const options = {
             enableHighAccuracy: true,
             timeout: 5000,
             maximumAge: 0
         };
+        if(navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(pos => {
+                posicao = { 
+                    lat: pos.coords.latitude,
+                    lng: pos.coords.longitude
+                };
+            }, 
+            err => alert(err + '\nPlease enable your GPS position feature.'), 
+            options);
+        } else {
+            console.log('Failed');
+        }
+        
+        return posicao;
+    }
+    
+    function initMap() {
         // Mostrar o as rotas dos transportes públicos e o tráfego
         const transitButton = document.createElement('button');
         const trafficButton = document.createElement('button');
-        navigator.geolocation.getCurrentPosition(pos => {
-            const posicao = { 
-                lat: pos.coords.latitude, 
-                lng: pos.coords.longitude
-            };
-            console.log('Precisão: ' + Math.round(pos.coords.accuracy) + ' metros'); // Poderia estar melhor...
-            const map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 16,
-                center: posicao,
-            });
+        let posicao = <%- JSON.stringify(posi); %>
+        if(!('lat' in posicao) || !('lng' in posicao)) posicao = getLocation();
+        const map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 16,
+            center: posicao,
+        });
+        
+        transitButton.textContent = "Linhas de transporte"; // Apenas metrô e trem
+        transitButton.classList.add("custom-map-control-button");
+        map.controls[google.maps.ControlPosition.TOP_CENTER].push(transitButton);
+
+        trafficButton.textContent = "Tráfego";
+        trafficButton.classList.add("custom-map-control-button");
+        map.controls[google.maps.ControlPosition.TOP_CENTER].push(trafficButton);
+
+        const transitLayer = new google.maps.TransitLayer();
+        const trafficLayer = new google.maps.TrafficLayer();
+
+        transitButton.addEventListener('click', _ => {
+            // toggle
+            if(transitLayer.getMap()) {
+                transitLayer.setMap(null);
+            } else {
+                transitLayer.setMap(map);
+            }
             
-            transitButton.textContent = "Linhas de transporte"; // Apenas metrô e trem
-            transitButton.classList.add("custom-map-control-button");
-            map.controls[google.maps.ControlPosition.TOP_CENTER].push(transitButton);
+        });
 
-            trafficButton.textContent = "Tráfego";
-            trafficButton.classList.add("custom-map-control-button");
-            map.controls[google.maps.ControlPosition.TOP_CENTER].push(trafficButton);
+        trafficButton.addEventListener('click', _ => {
+            // toggle
+            if(trafficLayer.getMap()) {
+                trafficLayer.setMap(null);
+            } else {
+                trafficLayer.setMap(map);
+            }
+        });
 
-            const transitLayer = new google.maps.TransitLayer();
-            const trafficLayer = new google.maps.TrafficLayer();
-
-            transitButton.addEventListener('click', _ => {
-                // toggle
-                if(transitLayer.getMap()) {
-                    transitLayer.setMap(null);
-                } else {
-                    transitLayer.setMap(map);
-                }
-                
-            });
-
-            trafficButton.addEventListener('click', _ => {
-                // toggle
-                if(trafficLayer.getMap()) {
-                    trafficLayer.setMap(null);
-                } else {
-                    trafficLayer.setMap(map);
-                }
-            });
-
-            // Marcador "você está aqui"
-            const marker = new google.maps.Marker({
-                position: posicao,
-                map,
-                title: 'Você está aqui!'
-            });
-        }, 
-        err => alert(err + '\nPlease enable your GPS position feature.'), 
-        options);
+        // Marcador "você está aqui"
+        const marker = new google.maps.Marker({
+            position: posicao,
+            map,
+            title: 'Você está aqui!'
+        });
     }
 </script>
