--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,10 @@ img {
     width: 32%;
 }
 
+.centerText {
+    text-align: center;
+}
+
 /* Botões de tráfego */
 
 /* Design dos botões pego da internet, segue link abaixo */
