--- a/views/linhas.ejs
+++ b/views/linhas.ejs
@@ -1,6 +1,21 @@
 <% if(nome) {%> 
     <div class="w-75">
         <p class="p-3 h2 text-primary centerText"><i class="fa-solid fa-location-dot"></i> <b>Você está aqui:</b> <%= nome %> </p>
+        <nav class="p-2 navbar navbar-expand-lg navbar-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link h3 text-primary" href="#" id="linhaServ"> <i class="fa-solid fa-bars"></i> Linhas e Serviços</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h3 disabled" href="#">/</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link h3" href="#" id="inti"> <i class="fa-solid fa-arrow-right-long"></i> Intinerários</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <p class="p-3 h2 text-info centerText"> <%= modo %> </p>
         <% intinerarios.forEach((element, index) => { %>
             <% if(index) {%>
@@ -9,4 +24,17 @@
             <% } %>
         <% }); %> 
     </div>
+    <script>
+        const linha = document.getElementById('linhaServ');
+        const inti = document.getElementById('inti');
+
+        function handleClick() {
+            linha.classList.toggle('text-primary');
+            inti.classList.toggle('text-primary');
+        }
+
+        linha.onclick = handleClick
+        inti.onclick = handleClick
+        
+    </script>
 <% } %> 
