falta ajeitar coisas de mapa, algumas funcionalidades estão meio dificeis de executar, mas estão funcionando de acordo com o esperado

--- a/views/googleMapsScript.ejs
+++ b/views/googleMapsScript.ejs
@@ -33,7 +33,7 @@
             center: posicao,
         });
         
-        transitButton.textContent = "Linhas de transporte"; // Apenas metrô e trem
+        transitButton.textContent = "Linhas de transporte";
         transitButton.classList.add("custom-map-control-button");
         map.controls[google.maps.ControlPosition.TOP_CENTER].push(transitButton);
 
