--- a/views/linhas.ejs
+++ b/views/linhas.ejs
@@ -58,7 +58,7 @@
             if(linha.classList.contains('text-primary')) {
                 linha.href = '/'; 
             } else if(inti.classList.contains('text-primary')) {
-                inti.href = '/inti';
+                inti.href = '/';
             }
         }
 
