reorganização do código

--- a/views/googleMapsScript.ejs
+++ b/views/googleMapsScript.ejs
@@ -1,4 +1,4 @@
-<script>
+<script type="text/javascript">
     function initMap() {
         // Mostrar o as rotas dos transportes públicos e o tráfego
         const transitButton = document.createElement('button');
