--- a/views/linhas.ejs
+++ b/views/linhas.ejs
@@ -10,7 +10,7 @@
                         <a class="nav-link h3 disabled" href="#">/</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h3" href="#" id="inti"> <i class="fa-solid fa-arrow-right-long"></i> Intinerários</a>
+                        <a class="nav-link h3" href="#" id="inti"> <i class="fa-solid fa-arrow-right-long"></i> Viagens</a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +40,7 @@
             </div>
         <% } %>
     </div>
-    <script>
+    <script type="text/javascript">
         const linha = document.getElementById('linhaServ');
         const inti = document.getElementById('inti');
         const ls = <%- JSON.stringify(ls); %>;
